--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 				</label>
 
 				<div class="trigger">
-					<a class="page-link" href="index.html">about</a>
-					<a class="page-link" href="blog.html">blog</a>
+					<a class="page-link" href="index.html">About</a>
+					<a class="page-link" href="blog.html">Blog</a>
 				</div>
 			</nav>
 		</div>
