--- a/index.html
+++ b/index.html
@@ -62,9 +62,9 @@
 			<div class="social">
 				<span class="contacticon center">
 					<p>
-						<a href='mailto:changdavidb@gmail.com' target='blank'>Email</a> |
-						<!-- <a href='./resume.pdf' target='blank'>CV</a> |  -->
-						<a href='https://github.com/brandonko' target='blank'>GitHub</a>
+						<a href='mailto:changdavidb@gmail.com' target='blank'>Email</a> &nbsp;/&nbsp;
+						<a href='./DavidChang-CV.pdf' target='blank'>CV</a> &nbsp;/&nbsp; 
+						<a href='https://github.com/davidbchang' target='blank'>GitHub</a>
 					</p>
 				</span>
 			</div>
